styles/interface.css
:root {
	--inputColor0: rgb(7, 58, 18);
	--inputColor1: rgb(184, 193, 233);
	--inputColor2: rgb(56, 6, 6);
	--inputColor3: rgba(175, 119, 35, 0);
	--inputColor4: rgb(13, 24, 128);
	--borderColor: #dfe1e6;
	--fontColor: #1f2667;

	--bg1: #2c3e50;
	--bg2: #1aa6ec;
	--bg3: white;
	--bg4: #e67e22;
	--bg5: #f5f6f7;
	--bg6: rgba(0, 0, 0, 0.6);
}

html,
body {
	font-size: 21px;
	font-family: "Roboto", sans-serif;
	text-align: center;
	width: 100%;
	height: 100%;
	margin: 0px;
	padding: 0px;
	color: var(--fontColor);
	overflow: hidden;
	background-color: var(--bg5);
}

.headerWrap {
	font-family: "Roboto", sans-serif;
	width: 100%;
	font-size: 24px;
	text-rendering: optimizeLegibility;
	-webkit-font-smoothing: antialiased;
	-moz-osx-font-smoothing: grayscale;
	font-weight: 700;
	position: absolute;
	top: 0;
	left: 0;
	background-color: var(--bg5);
	color: var(--fontColor);
	z-index: 9;
	box-sizing: border-box;
	display: flex;
	justify-content: space-between;
	align-items: center;
	flex-wrap: wrap;
	flex-direction: row;
	min-height: 50px;
	padding-left: 1em;
	padding-right: 1em;
}
.headerWrap a {
	/* position: absolute;
	float: right;
	height: 80%; */
	min-width: 50px;
	/* right: 0.5em; */
	/* top: 10%; */
}
.headerWrap img {
	height: 100%;
}

.mainWrapper {
	width: 100%;
	position: absolute;
	z-index: 11;
	background-color: var(--bg5);
	height: calc(100% - 500px);
	overflow-y: scroll;
}
.buttonPreviewWrap {
	width: 100%;
	height: 400px;
	max-height: calc(50% - 64px);
	z-index: 11;
	display: flex;
	justify-content: space-around;
	position: fixed;
	top: 0;
	left: 0;
	background-color: var(--bg1);
	pointer-events: none;
	box-shadow: inset 0em -0.2em 10px 3px rgb(0 0 0 / 50%),
		0em -0.2em 10px 3px rgb(0 0 0 / 50%);
}
.sideFiller {
	display: flex;
	flex-direction: column;
	justify-content: space-evenly;
}
.sideFiller button {
	cursor: pointer;
	pointer-events: all;
}
.buttonWrap {
	z-index: 1;
	position: relative;
	width: 400px;
	max-width: 50%;
}
.settingsWrap {
	z-index: 11;
	/* margin-top: 500px; */
}
/* .progrBar {
	width: 600px;
	height: 40px;
	margin-left: calc(50% - 300px);
	background: linear-gradient(90deg, green, green);
	background-repeat: no-repeat;
	background-origin: ; 
	background-size: 0% 100%; 
} */
.progrBarAnimated {
	animation: progrBarAnim linear 0s forwards;
}
.codeOutputWrap {
	width: 100%;
	box-sizing: border-box;
	display: flex;
	justify-content: center;
	flex-direction: column;
	align-content: center;
	align-items: center;
	flex-wrap: nowrap;
}

.codeBoxCont:first-child {
	/* margin-top: 0px; */
}
.codeBoxCont {
	max-width: 80%;
	width: 600px;
	/* padding: 20%; */
	position: relative;
	margin-top: 2em;
	margin-bottom: 2em;
	overflow: hidden;
}
.codeBox {
	padding: 15px;
	font-family: Courier, sans-serif;
	font-size: 0.7em;
	line-height: 1.3;
	color: var(--bg3);
	-webkit-border-radius: 0px 0px 6px 6px;
	-moz-border-radius: 0px 0px 6px 6px;
	border-radius: 0px 0px 6px 6px;
	margin-bottom: 10px;
	overflow: auto;
	max-height: 300px;
	margin: 0px;
	padding-bottom: 55px;
	background-color: var(--bg1);
}

code {
	font-family: Courier, sans-serif;
	font-size: 1em;
	line-height: 1.3;
	text-align: left;
	overflow: auto;
}

.codeHeader {
	box-sizing: border-box;
	/* padding: 10px 15px 10px 15px; */
	font-family: "Roboto", sans-serif;
	font-size: 1rem;
	color: var(--bg3);
	-webkit-border-radius: 6px 6px 0px 0px;
	-moz-border-radius: 6px 6px 0px 0px;
	border-radius: 6px 6px 0px 0px;
	user-select: none;
	-ms-user-select: none; /* IE10+, Edge */
	-moz-user-select: none; /* Mozilla */
	-webkit-user-select: none; /* Safari */
	background-color: var(--bg4);
	text-align: left;
	display: flex;
	justify-content: space-between;
	align-items: center;
	align-content: center;
}
.codeHeader .checkboxContainer {
	padding-right: 15px;
}
.codeHeader .checkboxContainer input {
	margin-left: 5px;
	background-color: var(--buttonColor1);
	box-shadow: inset 0em 0em 0em 1em var(--bg1),
		inset 0em 0em 0em 0.75em var(--inputColor4);
}
.codeHeader .checkboxContainer .checkboxInput:checked {
	box-shadow: inset 0em 0em 0em 0.3em var(--bg1),
		inset 0em 0em 0em 0.75em var(--bg4) !important;
}
.codeHeader .checkboxContainer .checkboxLabel {
	font-size: 0.8rem;
	font-family: "Roboto", sans-serif;
	text-align: left;
	line-height: 21px;
	color: var(--bg3);
}

.codeBoxTitle {
	padding: 10px 15px 10px 15px;
}
.codeBoxTitleTab {
	padding: 10px 15px 10px 15px;
	flex-grow: 2;
	border-right: 2px solid var(--borderColor);
	box-shadow: inset 0 0 0px 0px rgba(0, 0, 0, 0.2);
	transition: all 0.6s ease-out;
}
.codeBoxTitleTab:last-child {
	border-right: none;
}
.codeBoxTitleTab:hover {
	box-shadow: inset 0 0 30px 30px rgba(0, 0, 0, 0.2);
}
.codeBoxCont button {
	font-size: 1rem;
	width: 100%;
	height: 50px;
	cursor: pointer;
	font-family: "Roboto", sans-serif;
	background-color: var(--bg2);
	color: var(--bg3);
	bottom: calc(-1px * var(--scrollBarHeight));
	position: absolute;
	bottom: 0;
	left: 0;
}
.codeHeader button:active {
	transform: scale(0.95, 0.95);
}

.btn {
	box-shadow: inset 0 0 0px 0px rgba(0, 0, 0, 0.2);
	transition: all 0.3s ease-out;
	border: none;
	padding: 10px 15px 10px 15px;
	background-color: var(--bg5);
	color: var(--fontColor);
	min-height: 50px;
	border-radius: 3px;
	font-weight: 600;
	font-size: 1rem;
	-webkit-font-smoothing: subpixel-antialiased;
	backface-visibility: hidden;
	transform: perspective(1px) translateZ(0) scale(1, 1);
}
.btn:hover {
	transform: perspective(1px) translateZ(0) scale(1.05, 1.05);
	/* box-shadow: inset 0px 50px 0px 0px rgba(0, 0, 0, 0.2); */
}
.btn:active {
	transition: all 0.1s cubic-bezier(0.175, 0.885, 0.32, 1.275);
	transform: perspective(1px) translateZ(0) scale(0.86, 0.86);
}

.modalWindowBg {
	position: absolute;
	top: 0;
	left: 0;
	width: 100%;
	height: 100%;
	background-color: var(--bg6);
	/* opacity: 0.5; */
	display: flex;
	align-content: flex-start;
	justify-content: center;
	align-items: center;
	z-index: 1000;
	transition: all 0.3s ease-out;
}
.modalWindow {
	opacity: 1;
	width: 50%;

	background-color: var(--bg5);
	color: var(--fontColor);
	border-radius: 6px 6px 0px 0px;
	padding-bottom: 20px;
	max-height: 50%;

	overflow-y: auto;
	overflow-x: hidden;
}
.modalWindowTitle {
	opacity: 1;
	box-sizing: border-box;
	background-color: var(--bg2);
	width: 100%;
	font-size: 1.1em;
	padding: 10px 5px;
	margin-bottom: 1em;
}

.modalInnerWrap {
	width: 80%;
	margin-left: 10%;
}
.btnRow {
	display: flex;
	align-items: center;
	justify-content: space-around;
	align-content: center;
	transition: all 0.3s ease-out;
	border-bottom: 1px solid var(--bg6);
}
.btnRow:hover {
	transform: scale(1.1, 1.1);
	background-color: var(--borderColor);
}
.btnRow:hover div:last-child {
	margin-right: 4.5%;
	background-color: var(--borderColor);
}
.btnRow div {
	padding-top: 10px;
	padding-bottom: 10px;
	flex: 3;
}
.btnRow div:last-child {
	padding: 10px;
	flex: 1;
	flex-grow: 0;
	transition: all 0.2s ease-out;
}
.btnRow div:last-child:hover {
	transition: all 0.2s ease-out;
	cursor: pointer;
	background-color: var(--bg5);
	/* transform: scale(1.5, 1.5); */
}

.dividerLine {
	width: 100%;
	height: 1px;
	background-color: var(--borderColor);
	margin-top: 50px;
	margin-bottom: 50px;
}
#loader {
	position: absolute;
	top: 0;
	left: 0;
	width: 100%;
	height: 100%;
	z-index: 100000;
	background-color: var(--bg5);
	display: flex;
	justify-content: center;
	flex-direction: row;
	align-items: center;
}

.lds-ripple {
	display: inline-block;
	position: relative;
	width: 80px;
	height: 80px;
}
.lds-ripple div {
	position: absolute;
	border: 4px solid var(--fontColor);
	opacity: 1;
	border-radius: 50%;
	animation: lds-ripple 1s cubic-bezier(0, 0.2, 0.8, 1) infinite;
}
.lds-ripple div:nth-child(2) {
	animation-delay: -0.5s;
}
@keyframes lds-ripple {
	0% {
		top: 36px;
		left: 36px;
		width: 0;
		height: 0;
		opacity: 1;
	}
	100% {
		top: 0px;
		left: 0px;
		width: 72px;
		height: 72px;
		opacity: 0;
	}
}

